--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,18 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
